--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@ nav > div > :nth-child(-n+3) {
     margin-right: 1.5em;
 }
 
+.container-jumbo {
+    height: 45em;
+    background-color: #B4D0E7;
+}
+
 .jumbo {
     width: 100%;
     margin-bottom: -48px;
@@ -11,7 +16,9 @@ nav > div > :nth-child(-n+3) {
     font-size: 3em;
 }
 
-.container-azure {
-    height: 45em;
-    background-color: #B4D0E7;
+.container-plans {
+    height: 60em;
+    width: 1200px;
+    justify-content: space-between;
+    align-items: flex-start;
 }
