--- a/css/common.css
+++ b/css/common.css
@@ -17,6 +17,10 @@ nav {
     display: flex;
 }
 
+.wrap {
+    flex-wrap: wrap;
+}
+
 .justify-between {
     justify-content: space-between;
     align-items: center;
@@ -58,7 +62,6 @@ h1 {
 h2 {
     text-align: left;
     font-size: 3em;
-    padding-top: 1.5em;
     padding-bottom: 0.5em;
 }
 
@@ -84,6 +87,14 @@ input {
 
 label {
     margin-right: 1.5em;
+}
+
+.border {
+    border: 1px solid gray;
+}
+
+.gap {
+    gap: 15px;
 }
 
 /********** COLORI **********/
