--- a/css/style.css
+++ b/css/style.css
@@ -21,8 +21,36 @@ nav > div > :nth-child(-n+3) {
     width: 1200px;
     justify-content: space-between;
     align-items: flex-start;
+    margin-top: 2.5em;
 }
 
 .container-team {
     height: 10em;
 }
+
+.container-partner {
+    height: 32.5em;
+    margin-top: 5em;
+    margin-bottom: 5em;
+}
+
+.container-feature {
+    height: 70em;
+}
+
+.feature {
+    width: calc(100% / 3 - 10px);
+}
+
+.img-feature {
+    width: 100%;
+}
+
+#team {
+    font-size: 1.5em;
+    margin-top: 2em;
+    height: 2em;
+    line-height: 2em;
+    border-bottom: 0px;
+}
+
