--- a/css/style.css
+++ b/css/style.css
@@ -54,3 +54,12 @@ nav > div > :nth-child(-n+3) {
     border-bottom: 0px;
 }
 
+.container-squares {
+    width: 100%;
+    height: 40em;
+    margin-top: 5em;
+}
+
+.container-squares-smaller {
+    width: calc(100% / 3);
+}
