--- a/css/common.css
+++ b/css/common.css
@@ -72,8 +72,24 @@ button:hover {
     margin-top: 4.2em;
 }
 
+.margin-top-402 {
+    margin-top: 4.2em;
+}
+
+.margin-bottom-10 {
+    margin-bottom: 10em;
+}
+
+.margin-top-10 {
+    margin-top: 10em;
+}
+
 .margin-bottom-2 {
     margin-bottom: 2em;
+}
+
+.margin-left-3 {
+    margin-left: 3em;
 }
 
 .align-middle {
