--- a/css/style.css
+++ b/css/style.css
@@ -82,3 +82,7 @@ nav > div > :nth-child(-n+3) {
     border-color: black;
     border-image: initial;
 }
+
+#button-partner:hover {
+    background-color: #9bbef8;
+}
