--- a/css/common.css
+++ b/css/common.css
@@ -72,6 +72,10 @@ button:hover {
     margin-top: 2em;
 }
 
+.margin-top-3 {
+    margin-top: 3em;
+}
+
 .margin-top-402 {
     margin-top: 4.2em;
 }
@@ -82,6 +86,10 @@ button:hover {
 
 .margin-top-10 {
     margin-top: 10em;
+}
+
+.margin-bottom-05 {
+    margin-bottom: 0.5em;
 }
 
 .margin-bottom-2 {
@@ -169,6 +177,10 @@ input {
     width: 32%;
 }
 
+.width60 {
+    width: 60%;
+}
+
 .width70 {
     width: 70%;
 }
@@ -187,6 +199,10 @@ label {
 
 .gap {
     gap: 15px;
+}
+
+.gap-team {
+    gap: 80px;
 }
 
 .square {
