--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ nav > div > :nth-child(-n+3) {
 }
 
 .container-team {
-    height: 10em;
+    height: 15em;
     padding: 2em;
 }
 
@@ -71,6 +71,10 @@ nav > div > :nth-child(-n+3) {
 
 .height-colomn-plans {
     height: 57.7em;
+}
+
+#button-team {
+    width: 100%;
 }
 
 #button-partner {
