--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,12 @@ nav > div > :nth-child(-n+3) {
 
 .container-team {
     height: 15em;
-    padding: 2em;
+    padding: 3em;
+    padding-top: 7em;
+    padding-left: 0em;
+    gap: 10%;
+    display: flex;
+    justify-content: space-between;
 }
 
 .container-partner {
@@ -151,4 +156,26 @@ path {
 
 .designit-middle {
     width: 60%;
+}
+
+.free-trial {
+    background-color: #B4D0E7;
+    height: 20em;
+    width: 100%;
+}
+
+#button-free-trial {
+    width: 100%;
+    height: 55%;
+    background-color: white;
+    color: black;
+}
+
+#button-free-trial:hover {
+    background-color: lightgray;
+}
+
+.container-faq {
+    margin-top: 12em;
+    min-height: 45em;
 }
