--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ nav > div > :nth-child(-n+3) {
 
 .container-team {
     height: 15em;
-    padding: 3em;
+    padding: 2em;
 }
 
 .container-partner {
@@ -182,5 +182,21 @@ path {
 
 .container-faq {
     margin-top: 12em;
-    min-height: 45em;
+    min-height: 40em;
+}
+
+.faq-arrow {
+    float: right;
+}
+
+.faq .answer {
+    display: none;
+}
+
+.faq:hover .answer {
+    display: block;
+}
+
+.faq:hover a i {
+    transform: rotate(180deg);
 }
