--- a/css/common.css
+++ b/css/common.css
@@ -5,6 +5,20 @@
     font-family: 'Karla', sans-serif;
 }
 
+body {
+    padding-top: 2em;
+}
+
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: white;
+    width: 100%;
+    z-index: 999;
+    box-shadow: 3px 3px 10px 3px #c3c1c1;
+}
+
 nav {
     min-height: 5em;
 }
