--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@ nav > div > :nth-child(-n+3) {
     margin-right: 1.5em;
 }
 
+header a {
+    color: black;
+}
+
 .container-jumbo {
     height: 48em;
     background-color: #B4D0E7;
@@ -29,7 +33,6 @@ nav > div > :nth-child(-n+3) {
 }
 
 .container-team {
-    height: 15em;
     padding: 2em;
 }
 
@@ -158,7 +161,6 @@ path {
 }
 
 .container-free-trial {
-    height: 15em;
     padding: 3em;
     padding-top: 7em;
     padding-left: 0em;
@@ -175,7 +177,6 @@ path {
 
 #button-free-trial {
     width: 100%;
-    height: 55%;
     background-color: white;
     color: black;
 }
@@ -205,12 +206,12 @@ path {
     transform: rotate(180deg);
 }
 
-footer > div > div > ul > li > h3 {
+footer h3 {
     margin-bottom: 1em;
     font-size: 2.2em;
 }
 
-footer > div > div > ul > li > a > h5 {
+footer a {
     color: white;
 }
 
